<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/products_constraint_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".presentation.details.ui.DetailsFragment">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            style="@style/Widget.Material3.AppBarLayout"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:background="@color/white"
            app:liftOnScroll="true">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/top_app_bar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_scrollEffect="compress"
                app:layout_scrollFlags="scroll|enterAlways|snap"
                app:title="@string/lists_title"
                app:navigationIcon="@drawable/ic_arrow_back"
                app:titleCentered="true"
                app:titleTextAppearance="@style/TopBarTitle"
                app:titleTextColor="@color/soft_black" />

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="12dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
            app:spanCount="2"
            tools:itemCount="5"
            tools:listitem="@layout/product_item" />

        <View
            android:id="@+id/overlay"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#80000000"
            android:visibility="gone" />


        <LinearLayout
            android:id="@+id/bottom_sheet_layout_products"
            style="@style/ProductsBottomSheet"
            android:layout_width="match_parent"
            android:orientation="horizontal"

            android:gravity="center_horizontal"
            android:layout_height="match_parent"
            tools:visibility="visible">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="24dp"
                android:layout_height="wrap_content">

                <ImageButton
                    android:contentDescription="@string/delete"
                    android:id="@+id/cancel_deleting_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_close_28"
                    android:background="?android:attr/selectableItemBackgroundBorderless"
                    android:layout_gravity="center_horizontal"
                    />
                <TextView
                    android:layout_gravity="center_horizontal"
                    android:id="@+id/tv_cancel"
                    android:layout_marginTop="4dp"
                    android:text="@string/cancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_height="wrap_content">

                <ImageButton
                    android:contentDescription="@string/delete"
                    android:id="@+id/delete_product_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_delete"
                    android:background="?android:attr/selectableItemBackgroundBorderless"
                    android:layout_gravity="center_horizontal"
                    />
                <TextView
                    android:layout_gravity="center_horizontal"
                    android:id="@+id/tv_delete"
                    android:layout_marginTop="4dp"
                    android:text="@string/delete_product"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </LinearLayout>



        </LinearLayout>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/crete_new_product_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/rich_green"
        android:contentDescription="@string/fab_add_new_list"
        android:text="@string/add_new_list"
        android:textColor="@color/soft_black"
        app:srcCompat="@drawable/ic_add"
        app:iconTint="@color/soft_black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


    <LinearLayout
        android:id="@+id/intro_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:src="@drawable/ic_shopping_cart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:contentDescription="@string/intro" />

        <TextView
            android:paddingHorizontal="12dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/intro_product_text"
            android:textAlignment="center"
            android:textSize="16sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/error_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:src="@drawable/ic_error_144"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:contentDescription="@string/error" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:paddingHorizontal="12dp"
            android:text="@string/something_went_wrong"
            android:textAlignment="center"
            android:textSize="16sp" />

    </LinearLayout>

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:indeterminateTint="@color/rich_green"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>